--- a/cpp03/ex02/Makefile
+++ b/cpp03/ex02/Makefile
@@ -6,20 +6,22 @@
 #    By: cprojean <cprojean@42lyon.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/01 16:36:09 by cprojean          #+#    #+#              #
-#    Updated: 2023/12/11 16:19:12 by cprojean         ###   ########.fr        #
+#    Updated: 2023/12/11 16:16:03 by cprojean         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = Scavvy
+NAME = Fraggy
 
 CPP	 =	c++ -std=c++98 -g3
 
 SRCS =		main.cpp	\
 			ClapTrap.cpp	\
-			ScavTrap.cpp
+			ScavTrap.cpp 	\
+			FragTrap.cpp
 
 HEADER =	ClapTrap.hpp	\
-			ScavTrap.hpp
+			ScavTrap.hpp	\
+			FragTrap.hpp
 
 OBJS = $(SRCS:.cpp=.o)
 
