--- a/cpp07/ex02/Makefile
+++ b/cpp07/ex02/Makefile
@@ -6,28 +6,18 @@
 #    By: cprojean <cprojean@42lyon.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/01 16:36:09 by cprojean          #+#    #+#              #
-#    Updated: 2024/02/29 19:32:20 by cprojean         ###   ########.fr        #
+#    Updated: 2024/03/01 15:17:11 by cprojean         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = ExecutingForms
+NAME = Array
 
-CPP	 =	c++ -std=c++98
+CPP	 =	c++ -std=c++98 -g3
 
-SRCS =		main.cpp			\
-			Bureaucrat.cpp  	\
-			AForm.cpp 			\
-			ShrubberyCreationForm.cpp \
-			RobotomyRequestForm.cpp 	\
-			PresidentialPardonForm.cpp \
-			Intern.cpp
+SRCS =		main.cpp
 
-HEADER =	Bureaucrat.hpp	\
-			AForm.hpp		\
-			ShrubberyCreationForm.hpp \
-			RobotomyRequestForm.hpp 	\
-			PresidentialPardonForm.hpp 	\
-			Intern.hpp
+HEADER =	Array.hpp \
+			Array.tpp
 
 OBJS = $(SRCS:.cpp=.o)
 
@@ -35,7 +25,7 @@ CPPFLAGS = -Wall -Wextra -Werror
 
 all : $(NAME)
 
-%.o: $(DIR_SRCS)%.cpp $(HEADER)
+%.o: %.cpp $(HEADER)
 	$(CPP) $(CPPFLAGS) -I ./ -c $< -o $@
 
 $(NAME): $(OBJS)
