--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,8 @@
         "memory_resource": "cpp",
         "numeric": "cpp",
         "random": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "array.hpp": "c",
+        "*.tpp": "c"
     }
 }
