--- a/cpp05/ex03/Makefile
+++ b/cpp05/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: cprojean <cprojean@42lyon.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/01 16:36:09 by cprojean          #+#    #+#              #
-#    Updated: 2024/02/29 19:32:20 by cprojean         ###   ########.fr        #
+#    Updated: 2024/03/15 16:40:13 by cprojean         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -43,6 +43,7 @@ $(NAME): $(OBJS)
 
 clean : 
 	rm -rf $(OBJS)
+	rm -rf *_shrubbery
 
 fclean : clean
 	rm -rf $(NAME)
