--- a/cpp09/ex00/Makefile
+++ b/cpp09/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: cprojean <cprojean@42lyon.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/01 16:36:09 by cprojean          #+#    #+#              #
-#    Updated: 2024/03/28 13:45:57 by cprojean         ###   ########.fr        #
+#    Updated: 2024/03/29 14:45:46 by cprojean         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -39,4 +39,4 @@ fclean : clean
 
 re : fclean all
 
-.PHONY : all clean fclean re
+.PHONY : all clean fclean reA first easy exercise is the way to start off on the right foot.
